kube/develop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cwlabdeployment-develop
  namespace: cwlab-elixir-develop
  labels:
    app: cwlab
    stage: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cwlab
      stage: develop
  template:
    metadata:
      labels:
        app: cwlab
        stage: develop
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
      - name: cwlab-oidc
        image: ${CICD_REGISTRY}/krini/cwlab:oidc-${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: shared-pv
          mountPath: /mnt/cwlab
      volumes:
        - name: shared-pv
          persistentVolumeClaim:
            claimName: shared-develop
---
apiVersion: v1
kind: Service
metadata:
  name: cwlabservice-develop
  namespace: cwlab-elixir-develop
spec:
  selector:
    app: cwlab
    stage: develop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cwlabingress-develop
  namespace: cwlab-elixir-develop
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: cwlab.dev.krini.ingress.rancher.computational.bio
    http:
      paths:
      - backend:
          serviceName: cwlabservice-develop
          servicePort: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - cwlab.dev.krini.ingress.rancher.computational.bio
    secretName: cwlab-develop-letsencrypt-prod-private-cert # < cert-manager will store the created certificate in this secret.
