kube/testing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cwlabdeployment-testing
  namespace: cwlab-elixir-testing
  labels:
    app: cwlab
    stage: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cwlab
      stage: testing
  template:
    metadata:
      labels:
        app: cwlab
        stage: testing
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
      - name: cwlab-oidc
        image: ${CICD_REGISTRY}/krini/cwlab:oidc-${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 5000
          
---
apiVersion: v1
kind: Service
metadata:
  name: cwlabservice-testing
  namespace: cwlab-elixir-testing
spec:
  selector:
    app: cwlab
    stage: testing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cwlabingress-testing
  namespace: cwlab-elixir-testing
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: cwlab.dev.krini.ingress.rancher.computational.bio
    http:
      paths:
      - backend:
          serviceName: cwlabservice-testing
          servicePort: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - cwlab.testing.krini.ingress.rancher.computational.bio
    secretName: cwlab-testing-letsencrypt-prod-private-cert # < cert-manager will store the created certificate in this secret.
